objects/Bloom__c.object
<CustomObject>
    <fields>
        <fullName>Bouquet__c</fullName>
        <label>Bouquet</label>
        <referenceTo>Bouquet__c</referenceTo>
        <relationshipLabel>Blooms</relationshipLabel>
        <relationshipName>Blooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Blooms</relationshipLabel>
        <relationshipName>Blooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bloom</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bloom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>